# joblib-stubs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  opencode.json  pyproject.toml  pyrefly.toml  pyrightconfig.json  ruff.toml
.agents/skills/joblib-stub-updater/: SKILL.md
.agents/skills/joblib-stub-updater/references/: EXAMPLE_1.4_to_1.5.md  REFERENCE.md
.agents/skills/joblib-stub-updater/scripts/: analyze_changes.py
.claude/skills/joblib-stub-updater/: SKILL.md
.claude/skills/joblib-stub-updater/references/: EXAMPLE_1.4_to_1.5.md  REFERENCE.md
.claude/skills/joblib-stub-updater/scripts/: analyze_changes.py
.github/workflows/: lint.yaml  publish.yaml  test.yaml
skills/joblib-stub-updater/: SKILL.md
skills/joblib-stub-updater/scripts/: analyze_changes.py
src/joblib-stubs/: __init__.pyi  _cloudpickle_wrapper.pyi  _dask.pyi  _memmapping_reducer.pyi  _multiprocessing_helpers.pyi  _parallel_backends.pyi  _store_backends.pyi  _typeshed.pyi  _utils.pyi  backports.pyi  compressor.pyi  disk.pyi  executor.pyi  func_inspect.pyi  hashing.pyi  logger.pyi  memory.pyi  numpy_pickle.pyi  numpy_pickle_compat.pyi  numpy_pickle_utils.pyi  parallel.pyi  pool.pyi
src/tests/: __init__.py  test__cloudpickle_wrapper.py  test__dask.py  test__memmapping_reducer.py  test__multiprocessing_helpers.py  test__parallel_backends.py  test__store_backends.py  test__utils.py  test_backports.py  test_compressor.py  test_disk.py  test_executor.py  test_func_inspect.py  test_hashing.py  test_logger.py  test_memory.py  test_numpy_pickle.py  test_numpy_pickle_compat.py  test_numpy_pickle_utils.py  test_parallel.py  test_pool.py
typings/: joblib
