[project]
name = "joblib-stubs"
version = "0.0.0"
description = "joblib stubs"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
dependencies = [
    "typing-extensions>=4.4.0",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Stubs Only",
]

[project.urls]
Repository = "https://github.com/phi-friday/joblib-stubs"

[project.optional-dependencies]
mypy = [
    "mypy>=1.14.0",
]
mypy-strict = [
    "mypy==1.14.0",
    "joblib-stubs[mypy]",
]

[dependency-groups]
joblib-dependencies = [
    "joblib>=1.4.2",
    "numpy>=1.24.4",
    "dask>=2023.5.0",
    "distributed>=2023.5.0",
    "msgpack<1.1" # macos build error
]
dev = [
    { include-group = "joblib-dependencies" },
    "ruff==0.9.1",
    "pre-commit>=3.5.0",
    "poethepoet>=0.27.0",
    "joblib-stubs[mypy-strict]",
]

[tool.uv]
managed = true
default-groups = ["dev"]

[tool.poe.tasks]
lint = ["_lint:check", "_lint:format"]
"_lint:check" = "ruff check src --fix"
"_lint:format" = "ruff format src"
check = "pre-commit run --all-files --show-diff-on-failure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joblib-stubs"]

[tool.hatch.build.targets.sdist]
include = ["src/joblib-stubs"]

[tool.mypy]
python_version = "3.8"
strict = true
disable_error_code = "import-untyped,overload-overlap,override"
disallow_subclassing_any = false
local_partial_types = true
mypy_path = "typings"
