[project]
name = "joblib-stubs"
version = "0.0.0"
description = "joblib stubs"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
dependencies = [
    "typing-extensions>=4.4.0",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Stubs Only",
]

[project.urls]
Repository = "https://github.com/phi-friday/joblib-stubs"

[project.optional-dependencies]
mypy = [
    "mypy>=1.19.1",
]
mypy-strict = [
    "mypy==1.19.1",
    "joblib-stubs[mypy]",
]

[dependency-groups]
joblib-dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.0",
    "dask>=2025.12.0",
    "distributed>=2025.12.0",
]
test = [
    { include-group = "joblib-dependencies" },
    "pytest>=9.0.2",
]
dev = [
    { include-group = "joblib-dependencies" },
    "ruff==0.14.13",
    "pyright==1.1.408",
    "poethepoet>=0.40.0",
    "joblib-stubs[mypy-strict]",
]

[tool.uv]
managed = true
default-groups = ["dev", "test"]

[tool.poe.tasks]
lint = ["_lint:check", "_lint:format"]
"_lint:check" = "ruff check src --fix"
"_lint:format" = "ruff format src"
mypy = "mypy src --strict"
pyright = "pyright src"
check = ["lint", "mypy", "pyright"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joblib-stubs"]

[tool.hatch.build.targets.sdist]
include = ["src/joblib-stubs"]

[tool.mypy]
python_version = "3.11"
strict = true
disable_error_code = "import-untyped,overload-overlap,override"
disallow_subclassing_any = false
local_partial_types = true
mypy_path = "typings"
